--- a/style.css
+++ b/style.css
@@ -104,12 +104,12 @@
 
 footer {
     position: absolute;
-    bottom: 0;
+    bottom: 50px;
     width: 100%;
     text-align: center;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.7);
-    font-size: 14px;
+    font-size: 19px;
     z-index: 10;
 }
 
@@ -128,4 +128,5 @@ footer {
         width: 30px;
         height: 30px;
     }
+
 }
